@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.101 2005/03/24 23:16:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.102 2005/03/24 23:20:32 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  23 Mar 2005; Preston Cody <codeman@gentoo.org>
+  small changes to setup_network_post. moved adding to runlevel of net.x to
+  after the device gets symlinked.  added domainname runlevel command.
+  
   23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   minor fix (hopefully) to livecd-kernel code. Removed call to mkvardb in
   livecd-kernel code as it's now done by catalyst.
